<resources>
    <string name="app_name">GIVIT</string>
    <string name="app_slogan">One\'s Trash Another\'s Treasure</string>
    <string name="loading_screen_image">Loading Screen Image</string>

    <string name="copyrights">copyrights</string>
    <string name="description_para">What you throw away</string>
    <string name="description_para2">will mean the world to another</string>
    <string name="landing_page_image">Landing Page Image</string>
    <string name="sign_in_text">Already Have an Account ?</string>
    <string name="sign_in_button"><u>Sign In</u>.</string>
    <string name="sign_up_button"><u>Sign Up</u>.</string>
    <string name="food_and_groceries">Food and Groceries</string>
    <string name="kitchen_utensils">Kitchen Utensils</string>
    <string name="furniture">Furniture</string>
    <string name="home_accessories">Home Accessories</string>
    <string name="cloths_and_accessories">Cloths and Accessories</string>
    <string name="books_and_stationery">Books and Stationery</string>
    <string name="electronic_items">Electronic Items</string>
    <string name="sports_items">Sports Items</string>
    <string name="musical_instruments">Musical Instruments</string>
    <string name="adopt_a_pet">Adopt a Pet !</string>
    <string name="give_life_another_chance">Give life another chance</string>
    <string name="browse_for">Browse For</string>
    <string name="category_name">Category Name</string>

    <string name="txtUploadHeading">Upload items</string>
    <string name="txtUploadHeadingTwo">Add an image of the item</string>
    <string name="add_icon">add icon</string>
    <string name="upload_image">upload an image of the item</string>
    <string name="description">Description</string>
    <string name="item_title">Item title</string>
    <string name="item">Item</string>

    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="givit">GIVIT</string>
    <string name="thank_you_for_being_a_generous_giver">thank you for being a generous giver</string>
    <string name="type_something">Type Something</string>
    <string name="todo">TODO</string>

</resources>