<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E2E4"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_black"
        android:text="@string/app_name"
        android:textColor="#17706E"
        android:textColorHighlight="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtSlogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/app_slogan"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="327dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/description_para"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSlogan" />

    <TextView
        android:id="@+id/txtDescription2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/description_para2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <ImageView
        android:id="@+id/imgLanding"
        android:layout_width="241dp"
        android:layout_height="212dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/landing_page_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription2"
        app:srcCompat="@drawable/first_screen" />

    <TextView
        android:id="@+id/txtInvitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito"
        android:text="Join Givit Community"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLanding" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito"
        android:text="Sign-Up"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="#FB9036"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInvitation" />

    <TextView
        android:id="@+id/txtSignInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nunito"
        android:text="@string/sign_in_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnTxtSignIn"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/btnTxtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/nunito"
        android:text="@string/sign_in_button"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSignInText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSignInText"
        app:layout_constraintTop_toTopOf="@+id/txtSignInText"
        app:layout_constraintVertical_bias="0.0" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#BFFB9036"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/nunito"
            android:text="@string/copyrights"
            android:textColor="#4E342E"
            android:textSize="14sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>